Fixed overflow in dialog-popup

--- a/laravel/public/assets/css/elements/dialogs.css
+++ b/laravel/public/assets/css/elements/dialogs.css
@@ -13,6 +13,7 @@ dialog
 	max-width: 45%;
 	min-width: 30%;
 	opacity: 0;
+	overflow-x: hidden;
 	padding: 20px;
 	position: absolute;
 	top: 30%;
